UI Refinement: Fixed BottomNav and realigned Garden bubbles

--- a/web-frontend/src/index.css
+++ b/web-frontend/src/index.css
@@ -113,10 +113,12 @@ button {
 }
 
 .bottom-nav {
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  left: 0;
-  right: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 430px;
   height: 80px;
   display: flex;
   justify-content: space-around;
